--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="public/css/style.css" rel="stylesheet">
   </head>
 
   <body class="text-center">
@@ -20,7 +20,7 @@
     <main class="form-signin w-100 m-auto">
      <form action="/" method="post">
 
-      <img class="mb-4" src="images/add-user.png" alt="" width="100" height="100">
+      <img class="mb-4" src="public/images/add-user.png " alt="" width="100" height="100">
       <h1 class="h3 mb-3 fw-normal">Sing me up</h1>
       <input type="text" name="firstName" class="form-control top" placeholder="First Name" required autofocus>
       <input type="text" name="LastName" class="form-control middel"  placeholder="Last Name" required>
